<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/changeBackgroundColor"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/resultCongo"
            android:textColor="@color/greetingColor"
            android:textSize="@dimen/greetingSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultUserName"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

            <TextView
                android:id="@+id/showUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultPlaceholderName"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultCorrectAnswer"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

            <TextView
                android:id="@+id/showCorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultPlaceholderCorrectAnswers"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultWrongAnswer"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

            <TextView
                android:id="@+id/showWorngAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultPlaceholderWrongAnswers"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultScore"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

            <TextView
                android:id="@+id/showScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultPlaceholderScore"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultTotal"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultPlaceholderTotal"
                android:textColor="@color/otherTextColor"
                android:textSize="@dimen/resultOtherDisplaySize" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/buttonRestart"
                android:onClick="retakeQuiz"
                android:text="@string/startAgain"
                android:textColor="@color/editButtonText" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>