<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/abc2"
        android:contentDescription="@string/desc"
        android:id="@+id/backgroundImage"
        android:scaleType="centerCrop"
        android:background="@drawable/abc2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/editTextColor"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:onClick="start"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/editButtonText"
        android:textSize="26sp" />

</RelativeLayout>


